2003-12-26  Shiro Kawai  <shiro@acm.org>

	* src/kahua-server.in : Let *.kahua be loaded in a separate module
	  kahua-app-server, which imports kahua and kahua-server by default.
	  This separation prevents accidental interference between kahua-server
	  code and *.kahua, and also avoid issues about module "use" ordering
	  (i.e. there was a case that the order of "use" of *.kahua wasn't
	  really the order of imports, since some modules were already loaded
	  in kahua-server code.  With this change, *.kahua has full control
	  over the order of imports).

	* src/kahua/html.scm (form/cont) : same change as a/cont, i.e.
	  using PATH_INFO to pass session key instead of x-kahua-cgsid.

	* test/lambdabooks.scm, test/worker.scm : adapted to form/cont change.

	* test/worker.scm : added back the code to clean up the test
	  worker process after each test section.

2003-12-25  Shiro Kawai  <shiro@acm.org>

	* src/kahua-spvr.in : added "restart" spvr command to restart
	  specified worker, for the convenience of development.

	* src/kahua-admin.in : fixed "ls" output format.

	* cgi/kahua.cgi.in: refactored PATH_INFO processing, allowing
	  generated cgsid to be passed via kahua.cgi/$worker-type/$cgsid
	  format.

	* src/kahua/session.scm: changed cont-session table, so that
	  the same cont-id will be returned when "known closure" is passed
	  to session-cont-register.  This change allows global entry
	  (defined via define-entry) to be treated in the same way as
	  local closures.

	* src/kahua/html.scm (a/cont): due to the above changes, a/cont
	  is much simplified.
	  (define-entry): does not only add-entry!, but also defines
	  global named procedure.

	* examples/lambdabooks/*.kahua, test/acont.kahua: adapted to
	  above changes.

2003-12-26  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* cgi/kahua.cgi.in: fix regexp miss.

	* src/kahua-spvr.in: change app-servers format,
	  and a directory rule of checkout directory.