@@ -1,3 +1,9 @@
+2003-12-27  Koichi Sasada <sasada@namikilab.tuat.ac.jp>
+
+	* src/kahua/config.scm(kahua-init): add "skip-check?" optional argument
+	  to solve this problem:
+	  http://www.kahua.org/mlarchive/kahua-dev/msg00142.html
+
 2003-12-26  Shiro Kawai  <shiro@acm.org>
 
 	* src/kahua-server.in : Let *.kahua be loaded in a separate module
